# TheoremExtr

./: .gitignore  Dockerfile  README.md  build.sh  count_all.py  d.py  e.py  restart.sh  stop.sh  use.sh
Coq-Lemmas/: README.md  _CoqProject  dune-project
Coq-Lemmas/src/: META.coq-lemmas  dune  g_lemmas.mlg  lemmas_plugin.mlpack  llminfo.ml  llminfo.mli  mysearch.ml  mysearch.mli  some.ml  some.mli
Coq-Lemmas/theories/: Demo.v  Loader.v
headers/: .AAC_tactics.aux  .Cdcl.aux  .LibHyps.aux  .MathClasses.aux  .QuickChick.aux  .algebra_tactics.aux  .analysis.aux  .bigenough.aux  .bignums.aux  .compcert.aux  .coq_corn.aux  .coq_equations.aux  .coq_ext_lib.aux  .coq_fcsl_pcm.aux  .coq_gappa.aux  .coq_hott.aux  .coq_htt.aux  .coq_paramcoq.aux  .coq_relation_algebra.aux  .coq_stdlib.aux  .coq_unicoq.aux  .coqeal.aux  .coqprime.aux  .coquelicot.aux  .finmap.aux  .flocq.aux  .hierarchy_builder.aux  .interval.aux  .iris.aux  .mathcomp_algebra.aux  .mathcomp_character.aux  .mathcomp_field.aux  .mathcomp_fingroup.aux  .mathcomp_solvable.aux  .mathcomp_ssreflect.aux  .mtac.aux  .multinomials.aux  .real_closed.aux  .reglang.aux  .stdpp_coq_stdpp.aux  (+44 more)
lemmasearch_proj/: Makefile  unzip_file.py
lemmasearch_proj_extraction/: Makefile  unzip_file.py
